--- a/.classpath
+++ b/.classpath
@@ -1,33 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/io/papermc/paper/paper-api/1.19.2-R0.1-SNAPSHOT/paper-api-1.19.2-R0.1-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/guava/guava/21.0/guava-21.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.8.8/gson-2.8.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/md-5/bungeecord-chat/1.16-R0.4-deprecated+build.6/bungeecord-chat-1.16-R0.4-deprecated+build.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/yaml/snakeyaml/1.33/snakeyaml-1.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/googlecode/json-simple/json-simple/1.1.1/json-simple-1.1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/it/unimi/dsi/fastutil/8.5.6/fastutil-8.5.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/logging/log4j/log4j-api/2.17.1/log4j-api-2.17.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.36/slf4j-api-1.7.36.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-api/4.11.0/adventure-api-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-key/4.11.0/adventure-key-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/examination-api/1.3.0/examination-api-1.3.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jetbrains/annotations/22.0.0/annotations-22.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/examination-string/1.3.0/examination-string-1.3.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-minimessage/4.11.0/adventure-text-minimessage-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-serializer-gson/4.11.0/adventure-text-serializer-gson-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-serializer-legacy/4.11.0/adventure-text-serializer-legacy-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-serializer-plain/4.11.0/adventure-text-serializer-plain-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-logger-slf4j/4.11.0/adventure-text-logger-slf4j-4.11.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/checkerframework/checker-qual/3.12.0/checker-qual-3.12.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm/9.2/asm-9.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-commons/9.2/asm-commons-9.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-tree/9.2/asm-tree-9.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-analysis/9.2/asm-analysis-9.2.jar"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/papermc/paper/paper-api/1.19.2-R0.1-SNAPSHOT/paper-api-1.19.2-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/21.0/guava-21.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.8.8/gson-2.8.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/md-5/bungeecord-chat/1.16-R0.4-deprecated+build.6/bungeecord-chat-1.16-R0.4-deprecated+build.6.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/yaml/snakeyaml/1.33/snakeyaml-1.33.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/googlecode/json-simple/json-simple/1.1.1/json-simple-1.1.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/it/unimi/dsi/fastutil/8.5.6/fastutil-8.5.6.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/logging/log4j/log4j-api/2.17.1/log4j-api-2.17.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.36/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-api/4.11.0/adventure-api-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-key/4.11.0/adventure-key-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/examination-api/1.3.0/examination-api-1.3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/jetbrains/annotations/22.0.0/annotations-22.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/examination-string/1.3.0/examination-string-1.3.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-minimessage/4.11.0/adventure-text-minimessage-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-serializer-gson/4.11.0/adventure-text-serializer-gson-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-serializer-legacy/4.11.0/adventure-text-serializer-legacy-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-serializer-plain/4.11.0/adventure-text-serializer-plain-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/kyori/adventure-text-logger-slf4j/4.11.0/adventure-text-logger-slf4j-4.11.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/checkerframework/checker-qual/3.12.0/checker-qual-3.12.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm/9.2/asm-9.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-commons/9.2/asm-commons-9.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-tree/9.2/asm-tree-9.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/ow2/asm/asm-analysis/9.2/asm-analysis-9.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" path="target/generated-sources/annotations">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="m2e-apt" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="m2e-apt" value="true"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
