--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
   <groupId>de.tzockt.rottenfleshtoleather</groupId>
   <artifactId>rottenfleshtoleather</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>rottenfleshtoleather</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://tzockt.de</url>
 
   <repositories>
     <repository>
